Opened 3 months ago

Closed 3 months ago

Last modified 3 months ago

#19273 closed bug (fixed)

vfs: KDL when copying file in mounted BFS disk image

Reported by: X512 Owned by: nobody
Priority: normal Milestone: R1/beta6
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by X512)

This is hrev58368.

It happens when copying ~300 KB file from NVMe BFS disk into 4 GB BFS disk image mounted with diskimage tool. File is copied using Tracker GUI.

BFS disk image was formatted and filled by BeOS R5. Haiku checkfs show no errors on it.

Attachments (1)

IMG_20241201_121811-2.jpg (361.0 KB ) - added by X512 3 months ago.

Download all attachments as: .zip

Change History (10)

by X512, 3 months ago

Attachment: IMG_20241201_121811-2.jpg added

comment:1 by waddlesplash, 3 months ago

Milestone: UnscheduledR1/beta6
Summary: [regression] vfs: KDL when copying file in mounted BFS disk imagevfs: KDL when copying file in mounted BFS disk image

Probably not a regression but an uncovered bug, since the assertion was added recently. Likely the only problem here is a memory leak, but that's still significant of course.

comment:2 by waddlesplash, 3 months ago

<x512> In my case it always happens when copying ProcessController3.pkg into BeOS 4 GB disk image using Tracker.

comment:3 by X512, 3 months ago

Description: modified (diff)

comment:4 by waddlesplash, 3 months ago

This probably only could happen if we wind up "iterating" more than once (i.e. the underlying file has more than one block_run), but the source iovec is larger than the first iteration's I/O.

comment:5 by X512, 3 months ago

Description: modified (diff)

comment:6 by X512, 3 months ago

Description: modified (diff)

comment:7 by waddlesplash, 3 months ago

I found some disk images that reliably reproduce this, will investigate.

comment:8 by waddlesplash, 3 months ago

Resolution: fixed
Status: newclosed

Fixed in hrev58375.

comment:9 by X512, 3 months ago

Fix confirmed.

Note: See TracTickets for help on using tickets.