kernel/device_manager: Adjust assertion in IOBuffer::GetNextVirtualVec.

cookie->mapped_area may be < 0 but not -1 because map_physical_memory_vecs
previously failed.

Fixes #19273.