src/system/kernel/device_manager/IORequest.cpp
@@ -168,7 +168,7 @@ IOBuffer::GetNextVirtualVec(void*& _cookie, iovec& vector)
 			&& (fVecCount > 1 || fVecs[0].length > B_PAGE_SIZE)) {
 		void* mappedAddress;
 		addr_t mappedSize;
-		ASSERT(cookie->mapped_area == -1);
+		ASSERT(cookie->mapped_area < 0);
 
 // TODO: This is a potential violation of the VIP requirement, since
 // vm_map_physical_memory_vecs() allocates memory without special flags!
@@ -186,9 +186,9 @@ IOBuffer::GetNextVirtualVec(void*& _cookie, iovec& vector)
 	}
 
 	// fallback to page wise mapping
-	generic_io_vec& currentVec = fVecs[cookie->vec_index];
-	generic_addr_t address = currentVec.base + cookie->vec_offset;
-	size_t pageOffset = address % B_PAGE_SIZE;
+	const generic_io_vec& currentVec = fVecs[cookie->vec_index];
+	const generic_addr_t address = currentVec.base + cookie->vec_offset;
+	const size_t pageOffset = address % B_PAGE_SIZE;
 
 // TODO: This is a potential violation of the VIP requirement, since
 // vm_get_physical_page() may allocate memory without special flags!
